# cytools

./: .gitignore  PyNormaliz.pyi  pypalp.pyi  pyproject.toml  triangulumancer.pyi
benchmarks/: bench_calabiyau.py  bench_cone.py  bench_helpers.py  bench_polytope.py  bench_toricvariety.py  bench_triangulation.py  conftest.py  run_benchmarks.py
src/cytools/: __init__.py  calabiyau.py  cone.py  config.py  dataset.py  polytope.py  polytopeface.py  toricvariety.py  triangulation.py  utils.py
src/cytools/h_polytope/: h_polytope.py
src/cytools/helpers/: basic_geometry.py  matrix.py  misc.py
src/cytools/ntfe/: face_triangulations.py  ntfe.py
src/cytools/vector_config/: fan.py  vectorconfiguration.py
tests/: test_calabiyau.py  test_cone.py  test_hpolytope.py  test_polytope.py  test_triangulation.py
