[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cytools"
version = "1.4.6"
description = "A software package for analyzing Calabi-Yau hypersurfaces in toric varieties."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Liam McAllister Group", email = ""}
]
requires-python = ">=3.14"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "joblib",
    "cvxopt",
    "python-flint",
    "platformdirs",
    "pplpy",
    "ortools",
    "triangulumancer",
    "pypalp",
    "cygv",
    "PyNormaliz",
    "regfans",
    "tqdm",
    "qpsolvers",
    "osqp",
    "pyarrow>=23.0.1",
    "huggingface-hub>=1.5.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
mosek = [
  "mosek"
]

[project.urls]
Homepage = "https://cy.tools"
Documentation = "https://cy.tools/docs/documentation/"
Repository = "https://github.com/LiamMcAllisterGroup/cytools"

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
pythonpath = ["benchmarks"]
python_files = ["test_*.py", "bench_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/cytools"]

[tool.hatch.build.targets.sdist]
packages = ["src/cytools"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-benchmark>=5.2.3",
]
